# Classroom-Emotion-System

./: .do_state.json  .env.example  .gitignore  AI_TOOLS_HANDOUT.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  GEMINI.md  HANDOUT.md  LICENSE  MERGE_INSTRUCTIONS.md  MILESTONE_1_REPORT.md  PHASE_2_COMPLIANCE.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_IMPLEMENTATION_LOG.md  PROJECT_COMPLETION_LOG.md  README.md  StudentPicsDataset.xlsx  TASKS.md  VISION_PIPELINE_COMPARISON.md  app.yaml  classroom_emotions.db  database_export.xlsx  deploy_shiny.sh  do_manager.py  docker-compose.yml  doctor.py  full_database_backup.sql  generate_migration.py  generate_migration_v2.py  generate_migration_v3.py  implementation_plan.md  main.py  migration.sql  pr_249.diff  prod_seed.sql  pyproject.toml  python_env_verified.txt  quick_test.py  (+7 more)
.claude/: settings.local.json
.gemini/: settings.json
.specify/: init-options.json  plan.md  spec.md  tasks.md
backend/: Dockerfile  database.py  main.py
data-schema/: README.md
docs/: agent1_backend.md  agent2_shiny.md  claude_code_prompt.md  create_issues.ps1  gemini_issue_sync_prompt.md  implementation-plan-v2.md  old_assignees.json  plan_validation.md  pr_body.md  supabase_auth_schedule_plan.md  workload_division.md
frontend/: app.R
mcp_server/: requirements.txt  server.py
notebooks/: generate_synthetic_data.py
python-api/: .env.example  Dockerfile  database.py  fix_omar.py  main.py  models.py  re_encode_dataset.py  requirements-server.txt  requirements.txt  schemas.py  seed_db.py  sync_data.py  test_api.py  verify_db.py  (+2 more)
(+190 files in other folders)
