[project]
name = "classroom-emotion-system"
version = "0.1.0"
description = "System for monitoring classroom emotions using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
