[project]
name = "classroom-emotion-system"
version = "0.1.0"
description = "System for monitoring classroom emotions using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "opencv-python>=4.13.0.92",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["python-api/tests"]
pythonpath = ["python-api"]
